correction 2.0 alignement + contenu

--- a/menu.css
+++ b/menu.css
@@ -89,24 +89,22 @@ input {
     opacity: 1;
   }
 }
-@keyframes apparition__restaurant__left {
+@keyframes vignette__menu {
   0% {
-    transform: translateX(-30px);
+    width: 0px;
     opacity: 0;
   }
   100% {
-    transform: translateX(0);
+    width: 100px;
     opacity: 1;
   }
 }
-@keyframes apparition__restaurant__right {
+@keyframes rotation__icone {
   0% {
-    transform: translateX(30px);
-    opacity: 0;
+    transform: rotate(0);
   }
   100% {
-    transform: translateX(0);
-    opacity: 1;
+    transform: rotate(360deg);
   }
 }
 /* KEYFRAMES HEART ANIMATION */
@@ -409,13 +407,10 @@ article .menu .menu__organisation .menu__block__vignette {
   opacity: 0;
 }
 article .menu .menu__organisation .menu__block__vignette:hover .hiden__menu {
-  transition: 0.4s;
-  width: 100px;
-  opacity: 1;
+  animation: vignette__menu 0.4s ease forwards;
 }
 article .menu .menu__organisation .menu__block__vignette:hover .hiden__menu i {
-  transform: rotate(360deg);
-  transition: 0.5s;
+  animation: rotation__icone 0.5s ease forwards;
 }
 article .menu .menu__organisation .menu__block__vignette .hiden__menu {
   display: flex;
