--- a/sass/style.scss
+++ b/sass/style.scss
@@ -104,8 +104,8 @@ aside
     align-items: center;
     margin: 20px 0 20px 0;
     h2 {
-        width: 90%;
         margin: auto;
+        @include alignement_text;
     }
     .fonctionnement {
         display: flex;
@@ -166,9 +166,9 @@ aside
 article{
     background-color: $light-background;
     padding: 20px 0 20px 0;
-    & h1 {
-        width: 90%;
+    h2 {
         margin: auto;
+        @include alignement_text;
     }
     .article__organisation {
         display: flex;
